syntax = "proto3";

package userpb;

option go_package = "./userpb";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  bool verified = 4;
  string username = 5;
  string picture = 6;
  string bio = 7;
  string website = 8;
  string phone_number = 9;
  float created = 10;
  repeated string registration_tokens = 11;
}

message GetUserRequest {
  oneof identification {
    string user_id = 1;
    string username = 2;
  }
}

message GetUserResponse {
  User user = 1;
  int64 post_count = 2;
  bool follow_back = 3;
  int64 following_count = 4;
  int64 followers_count = 5;
  string story_state = 6;
}